--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,13 +9,13 @@ on:
 jobs:
   test:
     name: run tests
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux]
     steps:
       # Install and setup go
-      - name: Set up Go 1.16
+      - name: Set up Go 1.17
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16
+          go-version: 1.17
 
       
       # checkout horcrux
