Add ability to override private key file path in config and cli (#49)
* Remove unused toml and update systemd example command
* Add config property for priv key file and config init -k flag to generate
* Add omitempty for new key-file property

--- a/docs/horcrux.service
+++ b/docs/horcrux.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=ubuntu
 WorkingDirectory=/home/ubuntu
-ExecStart=/usr/bin/horcurx start
+ExecStart=/usr/bin/horcrux cosigner start
 Restart=on-failure
 RestartSec=3
 LimitNOFILE=4096
