Use GRPC for Raft and Leader calls (#61)
* Use GRPC for both Raft and Leader calls. Add leader election command

* Fix config init in tests

* Fix tests

* Update README.md

* Fix 2of3 test

* Fix listen flag in tests

* Add more sentries to downed signer tests

* Return recent blocks from cache

* Cleanup test waits

* Fix val address

* Add null safety for raft in pv.SignBlock

* Fix grpc raft store NPE. Better error for conflicting data.

* Fix lint

* Add missing return. Unlock mutexes before calling wg.Done

* Add signer-proto target to generate proto .go files. Use in tests

* Add more logs for conflicting data state

* Improve errors around conflicting data

* Don't sign votes with nil BlockID. Use timestamp in key with HRS to allow signing same HRS blocks with same data other than timestamp

* Use int64 for timestamp in HRSTKey

* Allow signing different timestamp from local cosigner

* Always return first proposal signature. Add wait for leader if no current leader when proxying

* Fix local cosigner test

* Close grpc connections

* Rename hrst

* Fix Serialization test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,6 +5,12 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '**.go'
+      - '**.mod'
+      - '**.sum'
+      - '**.proto'
+      - 'Makefile'
 
 jobs:
   test:
@@ -27,6 +33,10 @@ jobs:
           docker stop $(docker ps -a -q) || true
           docker rm -f $(docker ps -a -q) || true
           docker network prune -f || true
+
+      # make sure proto files are up to date
+      - name: generate fresh signer proto .go files
+        run: make signer-proto
 
       # run tests
       - name: run horcrux tests
